parser/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    LPAREN
    RPAREN
    EXTENDS

Grammar

Rule 0     S' -> start
Rule 1     start -> doc post_parsing
Rule 2     doc -> dict_def
Rule 3     doc -> global_stmts SEMICOLON dict_def
Rule 4     global_stmts -> global_stmt SEMICOLON
Rule 5     global_stmts -> global_stmt SEMICOLON global_stmts
Rule 6     global_stmt -> import_stmt
Rule 7     import_stmt -> IMPORT dotted_name
Rule 8     dotted_name -> NAME
Rule 9     dotted_name -> NAME DOT dotted_name
Rule 10    dict_def -> empty_dict_def
Rule 11    dict_def -> non_empty_dict_def
Rule 12    empty_dict_def -> LCURL RCURL
Rule 13    non_empty_dict_def -> LCURL dict_entries RCURL
Rule 14    dict_entries -> dict_entry
Rule 15    dict_entries -> dict_entry COMMA
Rule 16    dict_entries -> dict_entry COMMA dict_entries
Rule 17    dict_entry -> dict_key COLON dict_val
Rule 18    dict_key -> STRING_LITERAL
Rule 19    dict_key -> BOOLEAN
Rule 20    dict_key -> number
Rule 21    dict_key -> ref
Rule 22    ref -> REF LBRAC dict_key RBRAC
Rule 23    dict_val -> STRING_LITERAL
Rule 24    dict_val -> BOOLEAN
Rule 25    dict_val -> number
Rule 26    dict_val -> ref
Rule 27    dict_val -> dict_def
Rule 28    dict_val -> list_def
Rule 29    list_def -> LBRAC RBRAC
Rule 30    list_def -> LBRAC list_entries RBRAC
Rule 31    list_entries -> dict_val
Rule 32    list_entries -> dict_val COMMA
Rule 33    list_entries -> dict_val COMMA list_entries
Rule 34    number -> INTEGER
Rule 35    number -> INTEGER DOT INTEGER
Rule 36    post_parsing -> <empty>

Terminals, with rules where they appear

BOOLEAN              : 19 24
COLON                : 17
COMMA                : 15 16 32 33
DOT                  : 9 35
EXTENDS              : 
IMPORT               : 7
INTEGER              : 34 35 35
LBRAC                : 22 29 30
LCURL                : 12 13
LPAREN               : 
NAME                 : 8 9
RBRAC                : 22 29 30
RCURL                : 12 13
REF                  : 22
RPAREN               : 
SEMICOLON            : 3 4 5
STRING_LITERAL       : 18 23
error                : 

Nonterminals, with rules where they appear

dict_def             : 2 3 27
dict_entries         : 13 16
dict_entry           : 14 15 16
dict_key             : 17 22
dict_val             : 17 31 32 33
doc                  : 1
dotted_name          : 7 9
empty_dict_def       : 10
global_stmt          : 4 5
global_stmts         : 3 5
import_stmt          : 6
list_def             : 28
list_entries         : 30 33
non_empty_dict_def   : 11
number               : 20 25
post_parsing         : 1
ref                  : 21 26
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . doc post_parsing
    (2) doc -> . dict_def
    (3) doc -> . global_stmts SEMICOLON dict_def
    (10) dict_def -> . empty_dict_def
    (11) dict_def -> . non_empty_dict_def
    (4) global_stmts -> . global_stmt SEMICOLON
    (5) global_stmts -> . global_stmt SEMICOLON global_stmts
    (12) empty_dict_def -> . LCURL RCURL
    (13) non_empty_dict_def -> . LCURL dict_entries RCURL
    (6) global_stmt -> . import_stmt
    (7) import_stmt -> . IMPORT dotted_name

    LCURL           shift and go to state 8
    IMPORT          shift and go to state 10

    start                          shift and go to state 1
    doc                            shift and go to state 2
    dict_def                       shift and go to state 3
    global_stmts                   shift and go to state 4
    empty_dict_def                 shift and go to state 5
    non_empty_dict_def             shift and go to state 6
    global_stmt                    shift and go to state 7
    import_stmt                    shift and go to state 9

state 1

    (0) S' -> start .



state 2

    (1) start -> doc . post_parsing
    (36) post_parsing -> .

    $end            reduce using rule 36 (post_parsing -> .)

    post_parsing                   shift and go to state 11

state 3

    (2) doc -> dict_def .

    $end            reduce using rule 2 (doc -> dict_def .)


state 4

    (3) doc -> global_stmts . SEMICOLON dict_def

    SEMICOLON       shift and go to state 12


state 5

    (10) dict_def -> empty_dict_def .

    $end            reduce using rule 10 (dict_def -> empty_dict_def .)
    COMMA           reduce using rule 10 (dict_def -> empty_dict_def .)
    RCURL           reduce using rule 10 (dict_def -> empty_dict_def .)
    RBRAC           reduce using rule 10 (dict_def -> empty_dict_def .)


state 6

    (11) dict_def -> non_empty_dict_def .

    $end            reduce using rule 11 (dict_def -> non_empty_dict_def .)
    COMMA           reduce using rule 11 (dict_def -> non_empty_dict_def .)
    RCURL           reduce using rule 11 (dict_def -> non_empty_dict_def .)
    RBRAC           reduce using rule 11 (dict_def -> non_empty_dict_def .)


state 7

    (4) global_stmts -> global_stmt . SEMICOLON
    (5) global_stmts -> global_stmt . SEMICOLON global_stmts

    SEMICOLON       shift and go to state 13


state 8

    (12) empty_dict_def -> LCURL . RCURL
    (13) non_empty_dict_def -> LCURL . dict_entries RCURL
    (14) dict_entries -> . dict_entry
    (15) dict_entries -> . dict_entry COMMA
    (16) dict_entries -> . dict_entry COMMA dict_entries
    (17) dict_entry -> . dict_key COLON dict_val
    (18) dict_key -> . STRING_LITERAL
    (19) dict_key -> . BOOLEAN
    (20) dict_key -> . number
    (21) dict_key -> . ref
    (34) number -> . INTEGER
    (35) number -> . INTEGER DOT INTEGER
    (22) ref -> . REF LBRAC dict_key RBRAC

    RCURL           shift and go to state 14
    STRING_LITERAL  shift and go to state 18
    BOOLEAN         shift and go to state 19
    INTEGER         shift and go to state 22
    REF             shift and go to state 23

    dict_entries                   shift and go to state 15
    dict_entry                     shift and go to state 16
    dict_key                       shift and go to state 17
    number                         shift and go to state 20
    ref                            shift and go to state 21

state 9

    (6) global_stmt -> import_stmt .

    SEMICOLON       reduce using rule 6 (global_stmt -> import_stmt .)


state 10

    (7) import_stmt -> IMPORT . dotted_name
    (8) dotted_name -> . NAME
    (9) dotted_name -> . NAME DOT dotted_name

    NAME            shift and go to state 25

    dotted_name                    shift and go to state 24

state 11

    (1) start -> doc post_parsing .

    $end            reduce using rule 1 (start -> doc post_parsing .)


state 12

    (3) doc -> global_stmts SEMICOLON . dict_def
    (10) dict_def -> . empty_dict_def
    (11) dict_def -> . non_empty_dict_def
    (12) empty_dict_def -> . LCURL RCURL
    (13) non_empty_dict_def -> . LCURL dict_entries RCURL

    LCURL           shift and go to state 8

    dict_def                       shift and go to state 26
    empty_dict_def                 shift and go to state 5
    non_empty_dict_def             shift and go to state 6

state 13

    (4) global_stmts -> global_stmt SEMICOLON .
    (5) global_stmts -> global_stmt SEMICOLON . global_stmts
    (4) global_stmts -> . global_stmt SEMICOLON
    (5) global_stmts -> . global_stmt SEMICOLON global_stmts
    (6) global_stmt -> . import_stmt
    (7) import_stmt -> . IMPORT dotted_name

    SEMICOLON       reduce using rule 4 (global_stmts -> global_stmt SEMICOLON .)
    IMPORT          shift and go to state 10

    global_stmt                    shift and go to state 7
    global_stmts                   shift and go to state 27
    import_stmt                    shift and go to state 9

state 14

    (12) empty_dict_def -> LCURL RCURL .

    $end            reduce using rule 12 (empty_dict_def -> LCURL RCURL .)
    COMMA           reduce using rule 12 (empty_dict_def -> LCURL RCURL .)
    RCURL           reduce using rule 12 (empty_dict_def -> LCURL RCURL .)
    RBRAC           reduce using rule 12 (empty_dict_def -> LCURL RCURL .)


state 15

    (13) non_empty_dict_def -> LCURL dict_entries . RCURL

    RCURL           shift and go to state 28


state 16

    (14) dict_entries -> dict_entry .
    (15) dict_entries -> dict_entry . COMMA
    (16) dict_entries -> dict_entry . COMMA dict_entries

    RCURL           reduce using rule 14 (dict_entries -> dict_entry .)
    COMMA           shift and go to state 29


state 17

    (17) dict_entry -> dict_key . COLON dict_val

    COLON           shift and go to state 30


state 18

    (18) dict_key -> STRING_LITERAL .

    COLON           reduce using rule 18 (dict_key -> STRING_LITERAL .)
    RBRAC           reduce using rule 18 (dict_key -> STRING_LITERAL .)


state 19

    (19) dict_key -> BOOLEAN .

    COLON           reduce using rule 19 (dict_key -> BOOLEAN .)
    RBRAC           reduce using rule 19 (dict_key -> BOOLEAN .)


state 20

    (20) dict_key -> number .

    COLON           reduce using rule 20 (dict_key -> number .)
    RBRAC           reduce using rule 20 (dict_key -> number .)


state 21

    (21) dict_key -> ref .

    COLON           reduce using rule 21 (dict_key -> ref .)
    RBRAC           reduce using rule 21 (dict_key -> ref .)


state 22

    (34) number -> INTEGER .
    (35) number -> INTEGER . DOT INTEGER

    COLON           reduce using rule 34 (number -> INTEGER .)
    COMMA           reduce using rule 34 (number -> INTEGER .)
    RCURL           reduce using rule 34 (number -> INTEGER .)
    RBRAC           reduce using rule 34 (number -> INTEGER .)
    DOT             shift and go to state 31


state 23

    (22) ref -> REF . LBRAC dict_key RBRAC

    LBRAC           shift and go to state 32


state 24

    (7) import_stmt -> IMPORT dotted_name .

    SEMICOLON       reduce using rule 7 (import_stmt -> IMPORT dotted_name .)


state 25

    (8) dotted_name -> NAME .
    (9) dotted_name -> NAME . DOT dotted_name

    SEMICOLON       reduce using rule 8 (dotted_name -> NAME .)
    DOT             shift and go to state 33


state 26

    (3) doc -> global_stmts SEMICOLON dict_def .

    $end            reduce using rule 3 (doc -> global_stmts SEMICOLON dict_def .)


state 27

    (5) global_stmts -> global_stmt SEMICOLON global_stmts .

    SEMICOLON       reduce using rule 5 (global_stmts -> global_stmt SEMICOLON global_stmts .)


state 28

    (13) non_empty_dict_def -> LCURL dict_entries RCURL .

    $end            reduce using rule 13 (non_empty_dict_def -> LCURL dict_entries RCURL .)
    COMMA           reduce using rule 13 (non_empty_dict_def -> LCURL dict_entries RCURL .)
    RCURL           reduce using rule 13 (non_empty_dict_def -> LCURL dict_entries RCURL .)
    RBRAC           reduce using rule 13 (non_empty_dict_def -> LCURL dict_entries RCURL .)


state 29

    (15) dict_entries -> dict_entry COMMA .
    (16) dict_entries -> dict_entry COMMA . dict_entries
    (14) dict_entries -> . dict_entry
    (15) dict_entries -> . dict_entry COMMA
    (16) dict_entries -> . dict_entry COMMA dict_entries
    (17) dict_entry -> . dict_key COLON dict_val
    (18) dict_key -> . STRING_LITERAL
    (19) dict_key -> . BOOLEAN
    (20) dict_key -> . number
    (21) dict_key -> . ref
    (34) number -> . INTEGER
    (35) number -> . INTEGER DOT INTEGER
    (22) ref -> . REF LBRAC dict_key RBRAC

    RCURL           reduce using rule 15 (dict_entries -> dict_entry COMMA .)
    STRING_LITERAL  shift and go to state 18
    BOOLEAN         shift and go to state 19
    INTEGER         shift and go to state 22
    REF             shift and go to state 23

    dict_entry                     shift and go to state 16
    dict_entries                   shift and go to state 34
    dict_key                       shift and go to state 17
    number                         shift and go to state 20
    ref                            shift and go to state 21

state 30

    (17) dict_entry -> dict_key COLON . dict_val
    (23) dict_val -> . STRING_LITERAL
    (24) dict_val -> . BOOLEAN
    (25) dict_val -> . number
    (26) dict_val -> . ref
    (27) dict_val -> . dict_def
    (28) dict_val -> . list_def
    (34) number -> . INTEGER
    (35) number -> . INTEGER DOT INTEGER
    (22) ref -> . REF LBRAC dict_key RBRAC
    (10) dict_def -> . empty_dict_def
    (11) dict_def -> . non_empty_dict_def
    (29) list_def -> . LBRAC RBRAC
    (30) list_def -> . LBRAC list_entries RBRAC
    (12) empty_dict_def -> . LCURL RCURL
    (13) non_empty_dict_def -> . LCURL dict_entries RCURL

    STRING_LITERAL  shift and go to state 36
    BOOLEAN         shift and go to state 37
    INTEGER         shift and go to state 22
    REF             shift and go to state 23
    LBRAC           shift and go to state 42
    LCURL           shift and go to state 8

    dict_val                       shift and go to state 35
    number                         shift and go to state 38
    ref                            shift and go to state 39
    dict_def                       shift and go to state 40
    list_def                       shift and go to state 41
    empty_dict_def                 shift and go to state 5
    non_empty_dict_def             shift and go to state 6

state 31

    (35) number -> INTEGER DOT . INTEGER

    INTEGER         shift and go to state 43


state 32

    (22) ref -> REF LBRAC . dict_key RBRAC
    (18) dict_key -> . STRING_LITERAL
    (19) dict_key -> . BOOLEAN
    (20) dict_key -> . number
    (21) dict_key -> . ref
    (34) number -> . INTEGER
    (35) number -> . INTEGER DOT INTEGER
    (22) ref -> . REF LBRAC dict_key RBRAC

    STRING_LITERAL  shift and go to state 18
    BOOLEAN         shift and go to state 19
    INTEGER         shift and go to state 22
    REF             shift and go to state 23

    dict_key                       shift and go to state 44
    number                         shift and go to state 20
    ref                            shift and go to state 21

state 33

    (9) dotted_name -> NAME DOT . dotted_name
    (8) dotted_name -> . NAME
    (9) dotted_name -> . NAME DOT dotted_name

    NAME            shift and go to state 25

    dotted_name                    shift and go to state 45

state 34

    (16) dict_entries -> dict_entry COMMA dict_entries .

    RCURL           reduce using rule 16 (dict_entries -> dict_entry COMMA dict_entries .)


state 35

    (17) dict_entry -> dict_key COLON dict_val .

    COMMA           reduce using rule 17 (dict_entry -> dict_key COLON dict_val .)
    RCURL           reduce using rule 17 (dict_entry -> dict_key COLON dict_val .)


state 36

    (23) dict_val -> STRING_LITERAL .

    COMMA           reduce using rule 23 (dict_val -> STRING_LITERAL .)
    RCURL           reduce using rule 23 (dict_val -> STRING_LITERAL .)
    RBRAC           reduce using rule 23 (dict_val -> STRING_LITERAL .)


state 37

    (24) dict_val -> BOOLEAN .

    COMMA           reduce using rule 24 (dict_val -> BOOLEAN .)
    RCURL           reduce using rule 24 (dict_val -> BOOLEAN .)
    RBRAC           reduce using rule 24 (dict_val -> BOOLEAN .)


state 38

    (25) dict_val -> number .

    COMMA           reduce using rule 25 (dict_val -> number .)
    RCURL           reduce using rule 25 (dict_val -> number .)
    RBRAC           reduce using rule 25 (dict_val -> number .)


state 39

    (26) dict_val -> ref .

    COMMA           reduce using rule 26 (dict_val -> ref .)
    RCURL           reduce using rule 26 (dict_val -> ref .)
    RBRAC           reduce using rule 26 (dict_val -> ref .)


state 40

    (27) dict_val -> dict_def .

    COMMA           reduce using rule 27 (dict_val -> dict_def .)
    RCURL           reduce using rule 27 (dict_val -> dict_def .)
    RBRAC           reduce using rule 27 (dict_val -> dict_def .)


state 41

    (28) dict_val -> list_def .

    COMMA           reduce using rule 28 (dict_val -> list_def .)
    RCURL           reduce using rule 28 (dict_val -> list_def .)
    RBRAC           reduce using rule 28 (dict_val -> list_def .)


state 42

    (29) list_def -> LBRAC . RBRAC
    (30) list_def -> LBRAC . list_entries RBRAC
    (31) list_entries -> . dict_val
    (32) list_entries -> . dict_val COMMA
    (33) list_entries -> . dict_val COMMA list_entries
    (23) dict_val -> . STRING_LITERAL
    (24) dict_val -> . BOOLEAN
    (25) dict_val -> . number
    (26) dict_val -> . ref
    (27) dict_val -> . dict_def
    (28) dict_val -> . list_def
    (34) number -> . INTEGER
    (35) number -> . INTEGER DOT INTEGER
    (22) ref -> . REF LBRAC dict_key RBRAC
    (10) dict_def -> . empty_dict_def
    (11) dict_def -> . non_empty_dict_def
    (29) list_def -> . LBRAC RBRAC
    (30) list_def -> . LBRAC list_entries RBRAC
    (12) empty_dict_def -> . LCURL RCURL
    (13) non_empty_dict_def -> . LCURL dict_entries RCURL

    RBRAC           shift and go to state 46
    STRING_LITERAL  shift and go to state 36
    BOOLEAN         shift and go to state 37
    INTEGER         shift and go to state 22
    REF             shift and go to state 23
    LBRAC           shift and go to state 42
    LCURL           shift and go to state 8

    list_entries                   shift and go to state 47
    dict_val                       shift and go to state 48
    number                         shift and go to state 38
    ref                            shift and go to state 39
    dict_def                       shift and go to state 40
    list_def                       shift and go to state 41
    empty_dict_def                 shift and go to state 5
    non_empty_dict_def             shift and go to state 6

state 43

    (35) number -> INTEGER DOT INTEGER .

    COLON           reduce using rule 35 (number -> INTEGER DOT INTEGER .)
    COMMA           reduce using rule 35 (number -> INTEGER DOT INTEGER .)
    RCURL           reduce using rule 35 (number -> INTEGER DOT INTEGER .)
    RBRAC           reduce using rule 35 (number -> INTEGER DOT INTEGER .)


state 44

    (22) ref -> REF LBRAC dict_key . RBRAC

    RBRAC           shift and go to state 49


state 45

    (9) dotted_name -> NAME DOT dotted_name .

    SEMICOLON       reduce using rule 9 (dotted_name -> NAME DOT dotted_name .)


state 46

    (29) list_def -> LBRAC RBRAC .

    COMMA           reduce using rule 29 (list_def -> LBRAC RBRAC .)
    RCURL           reduce using rule 29 (list_def -> LBRAC RBRAC .)
    RBRAC           reduce using rule 29 (list_def -> LBRAC RBRAC .)


state 47

    (30) list_def -> LBRAC list_entries . RBRAC

    RBRAC           shift and go to state 50


state 48

    (31) list_entries -> dict_val .
    (32) list_entries -> dict_val . COMMA
    (33) list_entries -> dict_val . COMMA list_entries

    RBRAC           reduce using rule 31 (list_entries -> dict_val .)
    COMMA           shift and go to state 51


state 49

    (22) ref -> REF LBRAC dict_key RBRAC .

    COLON           reduce using rule 22 (ref -> REF LBRAC dict_key RBRAC .)
    COMMA           reduce using rule 22 (ref -> REF LBRAC dict_key RBRAC .)
    RCURL           reduce using rule 22 (ref -> REF LBRAC dict_key RBRAC .)
    RBRAC           reduce using rule 22 (ref -> REF LBRAC dict_key RBRAC .)


state 50

    (30) list_def -> LBRAC list_entries RBRAC .

    COMMA           reduce using rule 30 (list_def -> LBRAC list_entries RBRAC .)
    RCURL           reduce using rule 30 (list_def -> LBRAC list_entries RBRAC .)
    RBRAC           reduce using rule 30 (list_def -> LBRAC list_entries RBRAC .)


state 51

    (32) list_entries -> dict_val COMMA .
    (33) list_entries -> dict_val COMMA . list_entries
    (31) list_entries -> . dict_val
    (32) list_entries -> . dict_val COMMA
    (33) list_entries -> . dict_val COMMA list_entries
    (23) dict_val -> . STRING_LITERAL
    (24) dict_val -> . BOOLEAN
    (25) dict_val -> . number
    (26) dict_val -> . ref
    (27) dict_val -> . dict_def
    (28) dict_val -> . list_def
    (34) number -> . INTEGER
    (35) number -> . INTEGER DOT INTEGER
    (22) ref -> . REF LBRAC dict_key RBRAC
    (10) dict_def -> . empty_dict_def
    (11) dict_def -> . non_empty_dict_def
    (29) list_def -> . LBRAC RBRAC
    (30) list_def -> . LBRAC list_entries RBRAC
    (12) empty_dict_def -> . LCURL RCURL
    (13) non_empty_dict_def -> . LCURL dict_entries RCURL

    RBRAC           reduce using rule 32 (list_entries -> dict_val COMMA .)
    STRING_LITERAL  shift and go to state 36
    BOOLEAN         shift and go to state 37
    INTEGER         shift and go to state 22
    REF             shift and go to state 23
    LBRAC           shift and go to state 42
    LCURL           shift and go to state 8

    dict_val                       shift and go to state 48
    list_entries                   shift and go to state 52
    number                         shift and go to state 38
    ref                            shift and go to state 39
    dict_def                       shift and go to state 40
    list_def                       shift and go to state 41
    empty_dict_def                 shift and go to state 5
    non_empty_dict_def             shift and go to state 6

state 52

    (33) list_entries -> dict_val COMMA list_entries .

    RBRAC           reduce using rule 33 (list_entries -> dict_val COMMA list_entries .)

